# aindustriosa-rs

./: Readme.md  flake.nix
blackpill/: Cargo.toml
blackpill/src/: main.rs
blackpill_rtic/: Cargo.toml  README.md  openocd.cfg
blackpill_rtic/.cargo/: config.toml
blackpill_rtic/src/: main.rs
esp-s2/: Cargo.toml  Readme.md
esp-s2-i2c/: Cargo.toml
esp-s2-i2c/.cargo/: config.toml
esp-s2-i2c/src/: main.rs
esp-s2/src/: main.rs
proto/: Cargo.toml  notes.txt
proto/src/: main.rs
stm32/: Cargo.toml
stm32-i2c/: Cargo.toml
stm32-i2c/src/: main.rs
stm32/.cargo/: config.toml
stm32/src/: main.rs
stm32_arc/: Cargo.toml  memory.x  openocd.cfg
stm32_arc/src/: main.rs
workspaces/: Cargo.toml  Readme.md
workspaces/blackpill/: Cargo.toml
workspaces/blackpill/src/: main.rs
workspaces/libs/: Cargo.toml
workspaces/libs/src/: lib.rs
