[package]
authors = ["Eloy Coto <eloy.coto@acalustra.com>"]
edition = "2018"
readme = "README.md"
name = "stm32"
version = "0.1.0"

[dependencies]
embedded-hal = "0.2.6"
cortex-m-rtic = "1.1.4"
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
systick-monotonic = "1.0.0"

[dependencies.stm32f4xx-hal]
version = "0.14.0"
features = ["stm32f401"]

[dependencies.stm32f4]
features = ["stm32f401", "rt"]
version = "0.15.1"

# this lets you use `cargo fix`!
[[bin]]
name = "stm32"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
