[package]
name = "esp_s2"
version = "0.1.0"
authors = ["Eloy Coto <eloy.coto@acalustra.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
hal = { package = "esp32s2-hal", version = "0.9.0"}
esp-backtrace = { version = "0.5.0", features = ["esp32s2", "panic-handler", "print-uart"] }
esp-println       = { version = "0.3.1", features = ["esp32s2"] }
bme280 = { git = "https://github.com/eloycoto/bme280-rs.git", branch = "embedded-hal-1.0.0-alpha.10" }
# bme280 = { path = "/tmp/bme280-rs/" }
embedded-hal-bus = "0.1.0-alpha.2"

[features]
default = ["hal/eh1"]
