[package]
authors = ["Eloy Coto <eloy.coto@acalustra.com>"]
edition = "2018"
readme = "README.md"
name = "stm32"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.2"
cortex-m-rt = "0.7.2"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"
bme280 = "0.2"

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --examples device` to build it.
# [dependencies.stm32f3]
# features = ["stm32f303", "rt"]
# version = "0.7.1"

[dependencies.stm32f4xx-hal]
version = "0.14.0"
features = ["stm32f410"]

[dependencies.stm32f4]
features = ["stm32f410", "rt"]
version = "0.15.1"

# this lets you use `cargo fix`!
[[bin]]
name = "stm32"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
